--- a/05.sequences_series_limits.md
+++ b/05.sequences_series_limits.md
@@ -1,5 +1,9 @@
 # Sequences, series and limits
 
+TODO:
+- interest rate --> exp limit
+
+
 ## Sources and reading guide
 
 ```{dropdown} Sources and reading guide
