--- a/05.sequences_series_limits.md
+++ b/05.sequences_series_limits.md
@@ -6,13 +6,17 @@ TODO:
 
 ## Sources and reading guide
 
-```{dropdown} Sources and reading guide
+````{dropdown} Sources and reading guide
 
-Primary readings:
+```{figure} _static/img/bibliography/shsc2016.png
+:width: 100px
+:align: left
+```
+{cite:ps}`sydsaeter2016`
 
-{cite:ps}`sydsaeter2016`: Chapters 2.8, 2.9, 2.10, 2.11, 6.5, 7.9, 7.11, and 10 (pp. 52–62, 182–188, 257–266, 270–273, and 375–406).
+Chapters 2.8, 2.9, 2.10, 2.11, 6.5, 7.9, 7.11, and 10 (pp. 52–62, 182–188, 257–266, 270–273, and 375–406).
 
-Other sources/readings are below.
+<div style="clear: both"></div>
 
 Introductory level references:
 - {cite:ps}`ayres2013`
@@ -28,7 +32,7 @@ More advanced references:
 - {cite:ps}`spiegel1981a`: Chapters 2 and 3 (pp. 20-56).
 - {cite:ps}`takayama1993`: Chapter 1 (pp. 3-71).
 
-```
+````
 
 
 
