--- a/05.sequences_series_limits.md
+++ b/05.sequences_series_limits.md
@@ -1,8 +1,10 @@
 # Sequences, series and limits
 
+<small>⏱ <span class="eta"></span> | <span class="words"></span> words</small>
+
 TODO:
 - interest rate --> exp limit
-
+- Newton method -- iterations and convergence
 
 ## Sources and reading guide
 
@@ -278,6 +280,10 @@ Since there are two sequence of bundles, $\{ x^n \}_{n \in \mathbb{N}}$ and $\{ 
 
 
 ## Series
+
+
+- Add `Double sums, operations with sums` 2.9, 2.11
+
 
 A **series** can be viewed as the sum of the terms in a sequence.
 If we have a sequence $\{ x_n \}_{n \in \mathbb{N}}$ on $X$, then the associated series is the sum
