--- a/05.sequences_series.md
+++ b/05.sequences_series.md
@@ -89,10 +89,6 @@ Let $a \in \mathbb{R}$ and let $\{x_n\}$ be a sequence
 
 Suppose, for any $\epsilon > 0$, we can find an $N \in \mathbb{N}$ such that
 :::{math}
-x_n \in B_\epsilon(a) \text{ for all } n \geq N
-:::
-alternatively for $\mathbb{R}$
-:::{math}
 | x_n -a | <\epsilon \text{ for all } n \geq N
 :::
 Then $\{x_n\}$ is said to **converge** to $a$
@@ -101,9 +97,12 @@ Convergence to $a$ in symbols,
 :::{math}
 \forall \, \epsilon > 0, \;
 \exists \, N \in \mathbb{N} \; 
-\text{ such that } n \geq N \implies x_n \in B_{\epsilon}(a)
+\text{ such that } n \geq N \implies | x_n -a | <\epsilon
 :::
-The sequence $\{x_n\}$ is eventually in this $\epsilon$-ball around $a$
+
+- expression $| x_n -a | <\epsilon$ defines an $\epsilon$-*neighborhood around* $a$
+
+The sequence $\{x_n\}$ is eventually in this $\epsilon$-neighborhood around $a$
 
 ```{code-cell} python3
 ---
@@ -260,14 +259,14 @@ of
 :::{math}
 \forall \,\; \epsilon > 0, \;\; 
 \exists \,\; N \in \mathbb{N} \;\mathrm{such\;that}\; n \geq N
-\implies x_n \in B_{\epsilon}(a)
+\implies |x_n -a|<\epsilon
 :::
 
 In words, there is an $\epsilon > 0$ where we can't find any such $N$
 
-That is, for any choice of $N$ there will be $n>N$ such that $x_n$ jumps to the outside $B_{\epsilon}(a)$
+That is, for any choice of $N$ there will be $n>N$ such that $x_n$ jumps to the outside $\epsilon$-neighborhood around $a$
 
-In other words, there exists a $B_\epsilon(a)$ such that $x_n \notin B_\epsilon(a)$ again and again as $n \to \infty$.
+In other words, there exists a $\epsilon$ such that $|x_n-a| \geqslant \epsilon$ again and again as $n \to \infty$.
 
 This is the kind of picture we're thinking of
 
@@ -298,19 +297,21 @@ The sequence $x_n = (-1)^n$ does **not** converge to any $a \in \mathbb{R}$
 
 This is what we want to show
 :::{math}
-\exists \,\;  \epsilon > 0 \;\text{ such that } x_n \notin B_{\epsilon}(a) \text{ infinitely many times as } n \to \infty
+\exists \,\;  \epsilon > 0 \;\text{ such that } |x_n-a| \geqslant \epsilon \text{ infinitely many times as } n \to \infty
 :::
 Since it's a "there exists", we need to come up with such an $\epsilon$
 
-Let's try $\epsilon = 0.5$, so that 
+Let's try $\epsilon = 0.5$, so that the $\epsilon$-neighborhood around $a$ is
 :::{math}
-B_\epsilon(a) = \{ x \in \mathbb{R} : |x - a| < 0.5 \} = (a-0.5, a+0.5 )
+\{ x \in \mathbb{R} : |x - a| < 0.5 \} = (a-0.5, a+0.5 )
 :::
 We have:
 - If $n$ is odd then $x_n = -1$ when $n > N$ for _any_ $N$.
 - If $n$ is even then $x_n = 1$ when $n > N$ for _any_ $N$.
 
-Therefore even if $a=1$ or $a=-1$, $\{x_n\}$ not in $B_\epsilon(a)$ infinitely many times as $n \to \infty$. It holds for all other values of $a \in \mathbb{R}$.
+Therefore even if $a=1$ or $a=-1$, $\{x_n\}$ not in $(a-0.5, a+0.5 )$ infinitely many times as $n \to \infty$.
+
+It holds for all other values of $a \in \mathbb{R}$ as well
 ```
 
 ### Properties of limits
@@ -318,18 +319,14 @@ Therefore even if $a=1$ or $a=-1$, $\{x_n\}$ not in $B_\epsilon(a)$ infinitely m
 ```{admonition} Fact
 :class: important
 
-1. $x_n \to a$ in $\mathbb{R}^N$ if and only if $\|x_n -
-a\| \to 0$ in $\mathbb{R}$
+1. $x_n \to a$ in $\mathbb{R}$ if and only if $|x_n -
+a| \to 0$ in $\mathbb{R}$
 2. If $x_n \to x$ and $y_n \to y$ then $x_n +
 y_n \to x +  y$
 3. If $x_n \to x$ and $\alpha \in \mathbb{R}$ then $\alpha x_n \to \alpha x$
 4. If $x_n \to x$ and $y_n \to y$ then $x_n y_n \to xy$
 5. If $x_n \to x$ and $y_n \to y$ then $x_n / y_n \to x/y$, provided $y_n \ne 0$, $y \ne 0$
 6. If $x_n \to x$ then $x_n^p \to x^p$
-% 4. If $x_n \to x$ and $z \in \mathbb{R}^N$ then $z' x_n \to z' x$
-% 7. Every convergent sequence in $\mathbb{R}^N$ is Cauchy
-% 8. Every Cauchy sequence in $\mathbb{R}^N$ is convergent
-% 9. Every bounded sequence in $\mathbb{R}^N$ has a convergent subsequence
 ```
 
 ````{admonition} Proof
@@ -337,9 +334,9 @@ y_n \to x +  y$
 
 Let's prove that 
 :::{math}
-x_n \to a \text{ in } \mathbb{R}^N
+x_n \to a
 \; \iff \;
-\|x_n - a\| \to 0 \text{ in } \mathbb{R}
+|x_n - a| \to 0
 :::
 
 - $x_n \to a$ in $\mathbb{R}^N$ means that
@@ -348,15 +345,15 @@ x_n \to a \text{ in } \mathbb{R}^N
 \;
 \exists \, N \in \mathbb{N}
 \; \mathrm{such\;that}  \; 
-n \geq N \implies \| x_n - a \| < \epsilon
+n \geq N \implies | x_n - a | < \epsilon
 :::
-- $\|x_n - a\| \to 0$ in $\mathbb{R}$ means that
+- $|x_n - a| \to 0$ in $\mathbb{R}$ means that
 :::{math}
 \forall\,  \epsilon > 0, 
 \;
 \exists \, N \in \mathbb{N}
 \; \mathrm{such\;that}  \;
-n \geq N \implies | \| x_n - a \| - 0 | < \epsilon
+n \geq N \implies | | x_n - a | - 0 | < \epsilon
 :::
 Obviously equivalent
 
@@ -376,7 +373,7 @@ Proof for the $\mathbb{R}$ case.
 
 Suppose instead that $x_n \to a \text{ and } x_n \to b \text{ with } a \ne b $
 
-Take disjoint $\epsilon$-balls around $a$ and $b$
+Take disjoint $\epsilon$-neighborhoods around $a$ and $b$ as shown
 
 ```{figure} _static/img/lecture_05/disjnt_balls0.png
 :name: disjnt_balls2
@@ -384,12 +381,12 @@ Take disjoint $\epsilon$-balls around $a$ and $b$
 
 Since $x_n \to a$ and $x_n \to b$, 
 %
-- $\exists \; N_a$ s.t. $n \geq N_a \implies x_n \in B_{\epsilon}(a)$ 
-- $\exists \; N_b$ s.t. $n \geq N_b \implies x_n \in B_{\epsilon}(b)$
+- $\exists \; N_a$ s.t. $n \geq N_a \implies |x_n -a|<\epsilon$ 
+- $\exists \; N_b$ s.t. $n \geq N_b \implies |x_n -b|<\epsilon$
 
-But then $n \geq \max\{N_a, N_b\} \implies $ $x_n \in B_{\epsilon}(a)$ and $x_n \in B_{\epsilon}(b)$  
+But then $n \geq \max\{N_a, N_b\} \implies $ $|x_n -a|<\epsilon$ and $|x_n -b|<\epsilon$  
 
-Contradiction, as the balls are assumed disjoint
+Contradiction, as the intervals around $a$ and $b$ are assumed disjoint
 
 ````
 
@@ -415,12 +412,12 @@ Sequences generated by iterative methods for solving nonlinear equations often h
 A sequence $\{x_n\}$ is called **Cauchy** if
 :::{math}
 \forall \; \epsilon > 0, \;\; \exists \; N \in \mathbb{N} 
-\; \mathrm{such\;that}\;  \forall n, m \geqslant N \implies \| x_n - x_m \| < \epsilon
+\; \mathrm{such\;that}\;  \forall n, m \geqslant N \implies | x_n - x_m | < \epsilon
 :::
 Alternatively
 :::{math}
 \forall \; \epsilon > 0, \;\; \exists \; N \in \mathbb{N} 
-\; \mathrm{such\;that}\;  \forall j \geqslant N \implies \| x_n - x_{n+j} \| < \epsilon
+\; \mathrm{such\;that}\;  \forall j \geqslant N \implies | x_n - x_{n+j} | < \epsilon
 :::
 ```
 
@@ -686,8 +683,6 @@ The $n$-th partial sum is approximately equal $\ln(n)+\gamma$, where $\gamma = 0
 
 ### Proof by mathematical induction
 
-Note that the components of a sequence (and hence the individual terms in a series) are indexed by natural numbers.
-
 Suppose that we have a series of statements that can be indexed by the set of natural numbers ($\mathbb{N} = \{ 1, 2, \dots , n, \dots  \}$) and we want to prove that these statements are true for all $n \in \mathbb{N}$.  Denote the $n$-th statement as a claim by $A_n$.
 
 A proof of the claim by **deduction** might proceed as follows (where the symbol “$\land$” can be interpreted as meaning “and”):
@@ -700,10 +695,10 @@ The (countably) infinite number of cases that would need to be verified for such
 
 A proof proceeds as follows:
 
-$$A_1\; \text{ and }\; (\forall n A_n \Rightarrow A_{(n+1)}) \Rightarrow A$$
+$$A_1\; \text{ and }\; (\forall n \; A_n \Rightarrow A_{(n+1)}) \Rightarrow A$$
 
 - Step 1: Show that the claim is true when $n = 1$.
-- Step 2: Assume that the claim is true for the arbitrary case of $n = k$ (this is known as the inductive assumption) and show that, if this inductive assumption is true, then the claim must also be true for the case of $n = (k + 1)$. Note that it is imperative that the inductive assumption be used in the process of showing that the claim is true for $n = (k + 1)$ if an inductive proof is to be valid.
+- Step 2: Assume that the claim is true for the arbitrary case of $n = k$ (this is known as the *inductive assumption*) and show that, if this inductive assumption is true, then the claim must also be true for the case of $n = k + 1$.
 - Step 3: Apply the principle of mathematical induction to conclude that the claim is true for all $n \in \mathbb{N}$.
 
 The logic underlying a proof by induction is very intuitive. It basically establishes that the claim is true for $n = 1$, and that if the claim is true for $n = 1$, then it must also be true for $n = 2$, which means it must also be true for $n = 3$, which means it must also be true for $n = 4$, and so on and so forth, *ad infinitum*.
@@ -713,19 +708,19 @@ The logic underlying a proof by induction is very intuitive. It basically establ
 :class: tip
 
 We want to show that 
-$\sum\limits_{i = 1}^n x = \frac{n(n+1)}{2}$ for all $n \in \mathbb{N}$.
+$\sum\limits_{x = 1}^n x = \frac{n(n+1)}{2}$ for all $n \in \mathbb{N}$.
 
 The proof proceeds as follows.
 
-Note that $\sum\limits_{i = 1}^{n} x = 1$ and $\frac{1(1+1)}{2} = \frac{2}{2} = 1$. Thus the claim is true for $n = 1$.
+Note that $\sum\limits_{x = 1}^{1} x = 1$ and $\frac{1(1+1)}{2} = \frac{2}{2} = 1$. Thus the claim is true for $n = 1$.
 
 Assume that the claim is true for $n = k$. In other words, assume that 
-$\sum\limits_{i = 1}^k x = \frac{k(k+1)}{2}$.
+$\sum\limits_{x = 1}^k x = \frac{k(k+1)}{2}$.
 
 Consider the case of $n = (k + 1)$. 
-- Note that $\sum\limits^{k+1}_{i =1} x = (\sum\limits^{k}_{i = 1} x ) + (k + 1) = \frac{k(k+1)}{2} + (k + 1)$ by our inductive assumption. 
-- Note that $\frac{k(k+1)}{2} + (k + 1) = \frac{k(k+1)}{2} + \frac{2(k+1)}{2} = \frac{(k+2)(k+1)}{2}$.
-- Note that $\frac{(k+2)(k+1)}{2} = \frac{((k+1)+1)(k+1)}{2} = \frac{(k+1)((k+1)+1)}{2}$.
+- $\sum\limits^{k+1}_{x =1} x = (\sum\limits^{k}_{x = 1} x ) + (k + 1) = \frac{k(k+1)}{2} + (k + 1)$ due to our inductive assumption
+- $\frac{k(k+1)}{2} + (k + 1) = \frac{k(k+1)}{2} + \frac{2(k+1)}{2} = \frac{(k+2)(k+1)}{2}$
+- $\frac{(k+2)(k+1)}{2} = \frac{((k+1)+1)(k+1)}{2} = \frac{(k+1)((k+1)+1)}{2}$
 
 Thus we have shown that, if the claim is true for $n = k$, then it must also be true for $n = (k + 1)$.
 
