Typos and notes from lecture on week 5

--- a/05.sequences_series.md
+++ b/05.sequences_series.md
@@ -339,7 +339,7 @@ x_n \to a
 |x_n - a| \to 0
 :::
 
-- $x_n \to a$ in $\mathbb{R}^N$ means that
+- $x_n \to a$ in $\mathbb{R}$ means that
 :::{math}
 \forall \, \epsilon > 0, 
 \;
@@ -363,7 +363,7 @@ Obviously equivalent
 ```{admonition} Fact
 :class: important
 
-Each sequence in $\mathbb{R}^N$ has at most one limit
+Each sequence in $\mathbb{R}$ has at most one limit
 ```
 
 ````{admonition} Proof
@@ -495,7 +495,7 @@ $\{x_1, x_2, \dots , x_{n_1 − 1}, x_{n_1} , x_{n_1 + 1}, \dots , x_{n_2 − 1}
 ```{admonition} Definition
 :class: caution
 
-The sequence $\{x_{n_k} \}_{n_k \in \mathbb{N}}$ where ${n_k}_{k \in \mathbb{N}}$ and $n_{k+1} > n_k$ for all $k$, is referred to as a **sub-sequence** of the sequence $\{ x_n \}_{n \in \mathbb{N}}$
+The sequence $\{x_{n_k} \}_{n_k \in \mathbb{N}}$ where $k \in \mathbb{N}$ and $n_{k+1} > n_k$ for all $k$, is referred to as a **sub-sequence** of the sequence $\{ x_n \}_{n \in \mathbb{N}}$
 
 ```
 
@@ -540,7 +540,7 @@ $$\left\{  \frac{1}{2^k}  \right\}_{k \in \mathbb{N}}
 ```{admonition} Fact
 :class: important
 
-If $\{ x_n \}$ converges to $x$ in $\mathbb{R}^N$, then every
+If $\{ x_n \}$ converges to $x$ in $\mathbb{R}$, then every
 subsequence of $\{x_n\}$ also converges to $x$
 ```
 
@@ -1239,3 +1239,21 @@ There are many types of annuities. Using the terminology that is employed by {ci
 - **3Blue1Brown** (Grant Sanderson) video on series and inventing new math [YouTube](https://youtu.be/XFDM1ip5HdU?si=evnbKDkZa27Ec1iJ)
 - Computing $e$ as an infinite sum with derivation [YouTube](https://youtu.be/MXffhuDM_BU?si=-gSH_nAqPqFPqzCw)
 ```
+
+## Notes from the lecture
+
+````{admonition} Hand written notes from the lecture
+:class: note
+
+```{image} _static/img/notes/19mar/1.png
+   :width: 75%
+```
+```{image} _static/img/notes/19mar/2.png
+   :width: 75%
+```
+---
+```{image} _static/img/notes/19mar/3.png
+   :width: 75%
+```
+
+````
