--- a/05.sequences_series.md
+++ b/05.sequences_series.md
@@ -75,7 +75,7 @@ Note that this definition of a sequence does not explicitly allow for finite seq
 
 We have been looking at sequences drawn from some set $X$. The $n$-th element of such a sequence was denoted by $x_n$.  This requires that $x_n \in X$.
 
-Do not confuse this $x_n$ with the $n$-th coordinate of the point $x = (x_1, x_2, \dots , x_{(n−1)}, x_n, x+{(n+1)}, \dots , x_L) \in \mathbb{R}^L$.
+Do not confuse this $x_n$ with the $n$-th coordinate of the point $x = (x_1, x_2, \dots , x_{(n−1)}, x_n, x_{(n+1)}, \dots , x_L) \in \mathbb{R}^L$.
 
 If we are considering sequences of points (or vectors) in $\mathbb{R}^L$, then we might want to use superscripts to denote sequence position and subscripts to denote coordinates.
 - In this way, the $k$-th element of the sequence $\{ x_n \}^\infty_{n=1}$ would be the point (or vector) 
@@ -309,7 +309,7 @@ We have:
 - If $n$ is odd then $x_n = -1$ when $n > N$ for _any_ $N$.
 - If $n$ is even then $x_n = 1$ when $n > N$ for _any_ $N$.
 
-Therefore even if $a=1$ or $a=-1$, $\{x_n\}$ not in $(a-0.5, a+0.5 )$ infinitely many times as $n \to \infty$.
+Therefore even if $a=1$ or $a=-1$, $\{x_n\}$ is not in $(a-0.5, a+0.5 )$ infinitely many times as $n \to \infty$.
 
 It holds for all other values of $a \in \mathbb{R}$ as well
 ```
